router/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingressservice
  namespace: router
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    k8s-app: nginx-ingress-controller
  loadBalancerIP: 52.168.53.185
  type: LoadBalancer
