router/notebook-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: notebook
spec:
  type: ExternalName
  externalName: proxy-public.notebook.svc.cluster.local
  ports:
  - port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: notebookdev
spec:
  type: ExternalName
  externalName: proxy-public.notebookdev.svc.cluster.local
  ports:
  - port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: workshop
spec:
  type: ExternalName
  externalName: proxy-public.workshop.svc.cluster.local
  ports:
  - port: 80
