router/web-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  type: ExternalName
  externalName: web-wordpress.wordpress.svc.cluster.local
  ports:
  - port: 80
