router/ingress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rewrite  
  annotations:    
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: biosimspace.org
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  - host: www.biosimspace.org
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  - host: notebook.biosimspace.org
    http:
      paths:
      - path: /
        backend:
          serviceName: notebook
          servicePort: 80
  - host: notebookdev.biosimspace.org
    http:
      paths:
      - path: /
        backend:
          serviceName: notebookdev
          servicePort: 80
  - host: workshop.biosimspace.org
    http:
      paths:
      - path: /
        backend:
          serviceName: workshop
          servicePort: 80
  tls:
  - secretName: web-tls-cert
    hosts:
    - biosimspace.org
    - www.biosimspace.org
    - notebook.biosimspace.org
    - wwwdev.biosimspace.org
    - notebookdev.biosimspace.org
    - workshop.biosimspace.org
